@@ -478,6 +478,7 @@ extern CHAR16              *SelfDirPath;
 extern CHAR16              *gHiddenTools;
 
 extern UINTN                VolumesCount;
+extern UINTN                RecoveryVolumesCount;
 extern UINTN                PreBootVolumesCount;
 extern UINTN                SystemVolumesCount;
 extern UINTN                DataVolumesCount;
@@ -501,6 +502,7 @@ extern EFI_LOADED_IMAGE    *SelfLoadedImage;
 
 extern REFIT_VOLUME        *SelfVolume;
 extern REFIT_VOLUME       **Volumes;
+extern REFIT_VOLUME       **RecoveryVolumes;
 extern REFIT_VOLUME       **PreBootVolumes;
 extern REFIT_VOLUME       **SystemVolumes;
 extern REFIT_VOLUME       **DataVolumes;
